WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37421
[Haiku] Fix PasteboardHaiku and flesh out implementation
https://bugs.webkit.org/show_bug.cgi?id=37421
Summary
[Haiku] Fix PasteboardHaiku and flesh out implementation
Stephan Aßmus
Reported
2010-04-11 16:29:10 PDT
Patch improves the following: * Use the system clipboard instead of a private one to interact with other apps. * Implement more methods. * Use the proper messaging protocol (Add/FindData() with B_MIME_TYPE). * Don't leak the global Pasteboard instance.
Attachments
[Haiku] Patch for PasteboardHaiku.cpp
(8.79 KB, patch)
2010-04-11 16:30 PDT
,
Stephan Aßmus
no flags
Details
Formatted Diff
Diff
[Haiku] Patch for PasteboardHaiku.cpp
(8.79 KB, patch)
2010-04-13 07:12 PDT
,
Stephan Aßmus
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Stephan Aßmus
Comment 1
2010-04-11 16:30:03 PDT
Created
attachment 53117
[details]
[Haiku] Patch for PasteboardHaiku.cpp
Stephan Aßmus
Comment 2
2010-04-13 07:12:38 PDT
Created
attachment 53245
[details]
[Haiku] Patch for PasteboardHaiku.cpp Sorry, the original patch was still lacking the correct bug number. Nothing else changed.
WebKit Commit Bot
Comment 3
2010-04-13 10:46:53 PDT
Comment on
attachment 53245
[details]
[Haiku] Patch for PasteboardHaiku.cpp Clearing flags on attachment: 53245 Committed
r57522
: <
http://trac.webkit.org/changeset/57522
>
WebKit Commit Bot
Comment 4
2010-04-13 10:46:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug