2010-04-13  Stephan Aßmus  <superstippi@gmx.de>

Reviewed by David Levin.

        [Haiku] Use the system clipboard instead of a private clipboard.
                Fix various problems in the previous implementation.

        https://bugs.webkit.org/show_bug.cgi?id=37421

        No new tests needed.

        * platform/haiku/PasteboardHaiku.cpp:
        (WebCore::Pasteboard::~Pasteboard):
        (WebCore::Pasteboard::generalPasteboard):
            - Don't leak the pasteboard at program exit.
        (WebCore::AutoClipboardLocker::AutoClipboardLocker):
        (WebCore::AutoClipboardLocker::~AutoClipboardLocker):
        (WebCore::AutoClipboardLocker::isLocked):
            - helper class for locking a BClipboard.
        (WebCore::Pasteboard::writeSelection):
            - Use AddData(B_MIME_TYPE) as required by clipboard protocol.
            - Make sure we don't end up with unwanted UTF-8 characters for
              regular line breaks.
        (WebCore::Pasteboard::writePlainText):
            - Use AddData(B_MIME_TYPE) as required by clipboard protocol.
        (WebCore::Pasteboard::plainText):
            - Use FindData(B_MIME_TYPE) as required by clipboard protocol.
        (WebCore::Pasteboard::documentFragment):
            - Implemented.
        (WebCore::Pasteboard::writeURL):
            - Needs to use AddData(B_MIME_TYPE) instead of AddString().
        (WebCore::Pasteboard::clear):

Canonical link: https://commits.webkit.org/48810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57522 268f45cc-cd09-0410-ab3c-d52691b4dbfc